RESOLVED FIXED305637
REGRESSION(305570@main): [WPE][GTK] ASSERTION FAILED: m_transparencyLayerCount > 0
https://bugs.webkit.org/show_bug.cgi?id=305637
Summary REGRESSION(305570@main): [WPE][GTK] ASSERTION FAILED: m_transparencyLayerCoun...
Fujii Hironori
Reported 2026-01-16 05:54:37 PST
[WPE][GTK] ASSERTION FAILED: m_transparencyLayerCount >0 Regressions: Unexpected crashes imported/w3c/web-platform-tests/html/canvas/element/layers/2d.layer.global-states.filter.ctx-filter.no-transform.html [ Crash ] imported/w3c/web-platform-tests/html/canvas/element/layers/2d.layer.global-states.filter.ctx-filter.rotation.html [ Crash ] imported/w3c/web-platform-tests/html/canvas/element/layers/2d.layer.global-states.filter.no-cxt-filter.no-transform.html [ Crash ] imported/w3c/web-platform-tests/html/canvas/element/layers/2d.layer.global-states.filter.no-cxt-filter.rotation.html [ Crash ] https://build.webkit.org/results/WPE-Linux-64-bit-Debug-Tests/305575@main%20(13648)/imported/w3c/web-platform-tests/html/canvas/element/layers/2d.layer.global-states.filter.ctx-filter.no-transform-crash-log.txt STDERR: ASSERTION FAILED: m_transparencyLayerCount > 0 STDERR: ../../../Source/WebCore/platform/graphics/GraphicsContext.cpp(165) : virtual void WebCore::GraphicsContext::endTransparencyLayer() STDERR: 1 0x7f9b4574e16c WebCore::GraphicsContext::endTransparencyLayer() STDERR: 2 0x7f9b45b2d437 WebCore::GraphicsContextSkia::endTransparencyLayer() STDERR: 3 0x7f9b46d7ba93 WebCore::SVGImage::draw(WebCore::GraphicsContext&, WebCore::FloatRect const&, WebCore::FloatRect const&, WebCore::ImagePaintingOptions) STDERR: 4 0x7f9b4574f49c WebCore::GraphicsContext::drawImage(WebCore::Image&, WebCore::FloatRect const&, WebCore::FloatRect const&, WebCore::ImagePaintingOptions) STDERR: 5 0x7f9b44745442 WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::Document&, WebCore::CachedImage&, WebCore::RenderObject const*, WebCore::FloatRect const&, WebCore::FloatRect const&, WebCore::FloatRect const&, WebCore::CompositeOperator const&, WebCore::BlendMode const&, WebCore::ImageOrientation) STDERR: 6 0x7f9b44744462 WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::HTMLImageElement&, WebCore::FloatRect const&, WebCore::FloatRect const&, WebCore::CompositeOperator const&, WebCore::BlendMode const&) STDERR: 7 0x7f9b447440a3 WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::HTMLImageElement&, WebCore::FloatRect const&, WebCore::FloatRect const&) STDERR: 8 0x7f9b44741a3e operator() STDERR: 9 0x7f9b4475a165 invoke<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> >, WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >&> STDERR: 10 0x7f9b447522e0 invoke<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> >, WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >&> STDERR: 11 0x7f9b44741c98 invoke STDERR: 12 0x7f9b44741d0d operator()<mpark::detail::alt<0, WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> > >&> STDERR: 13 0x7f9b44765447 invoke<mpark::detail::visitation::variant::value_visitor<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> > >, mpark::detail::alt<0, WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> > >&> STDERR: 14 0x7f9b4475fefc invoke<mpark::detail::visitation::variant::value_visitor<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> > >, mpark::detail::alt<0, WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> > >&> STDERR: 15 0x7f9b4475a1d7 invoke<mpark::detail::visitation::variant::value_visitor<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> > >, mpark::detail::alt<0, WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> > >&> STDERR: 16 0x7f9b44741e3b visit_alt<mpark::detail::visitation::variant::value_visitor<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> > >, mpark::detail::impl<WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::RawPtrTraits<WebCore::HTMLCanvasElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::ImageBitmap, WTF::RawPtrTraits<WebCore::ImageBitmap>, WTF::DefaultRefDerefTraits<WebCore::ImageBitmap> >, WTF::RefPtr<WebCore::CSSStyleImageValue, WTF::RawPtrTraits<WebCore::CSSStyleImageValue>, WTF::DefaultRefDerefTraits<WebCore::CSSStyleImageValue> >, WTF::RefPtr<WebCore::OffscreenCanvas, WTF::RawPtrTraits<WebCore::OffscreenCanvas>, WTF::DefaultRefDerefTraits<WebCore::OffscreenCanvas> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::RawPtrTraits<WebCore::HTMLVideoElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLVideoElement> >, WTF::RefPtr<WebCore::WebCodecsVideoFrame, WTF::RawPtrTraits<WebCore::WebCodecsVideoFrame>, WTF::DefaultRefDerefTraits<WebCore::WebCodecsVideoFrame> > >&> STDERR: 17 0x7f9b44742619 visit_alt<mpark::detail::visitation::variant::value_visitor<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> > >, mpark::variant<WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::RawPtrTraits<WebCore::HTMLCanvasElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::ImageBitmap, WTF::RawPtrTraits<WebCore::ImageBitmap>, WTF::DefaultRefDerefTraits<WebCore::ImageBitmap> >, WTF::RefPtr<WebCore::CSSStyleImageValue, WTF::RawPtrTraits<WebCore::CSSStyleImageValue>, WTF::DefaultRefDerefTraits<WebCore::CSSStyleImageValue> >, WTF::RefPtr<WebCore::OffscreenCanvas, WTF::RawPtrTraits<WebCore::OffscreenCanvas>, WTF::DefaultRefDerefTraits<WebCore::OffscreenCanvas> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::RawPtrTraits<WebCore::HTMLVideoElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLVideoElement> >, WTF::RefPtr<WebCore::WebCodecsVideoFrame, WTF::RawPtrTraits<WebCore::WebCodecsVideoFrame>, WTF::DefaultRefDerefTraits<WebCore::WebCodecsVideoFrame> > >&> STDERR: 18 0x7f9b44742698 visit_value<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> >, mpark::variant<WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::RawPtrTraits<WebCore::HTMLCanvasElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::ImageBitmap, WTF::RawPtrTraits<WebCore::ImageBitmap>, WTF::DefaultRefDerefTraits<WebCore::ImageBitmap> >, WTF::RefPtr<WebCore::CSSStyleImageValue, WTF::RawPtrTraits<WebCore::CSSStyleImageValue>, WTF::DefaultRefDerefTraits<WebCore::CSSStyleImageValue> >, WTF::RefPtr<WebCore::OffscreenCanvas, WTF::RawPtrTraits<WebCore::OffscreenCanvas>, WTF::DefaultRefDerefTraits<WebCore::OffscreenCanvas> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::RawPtrTraits<WebCore::HTMLVideoElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLVideoElement> >, WTF::RefPtr<WebCore::WebCodecsVideoFrame, WTF::RawPtrTraits<WebCore::WebCodecsVideoFrame>, WTF::DefaultRefDerefTraits<WebCore::WebCodecsVideoFrame> > >&> STDERR: 19 0x7f9b44742753 visit<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> >, mpark::variant<WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::RawPtrTraits<WebCore::HTMLCanvasElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::ImageBitmap, WTF::RawPtrTraits<WebCore::ImageBitmap>, WTF::DefaultRefDerefTraits<WebCore::ImageBitmap> >, WTF::RefPtr<WebCore::CSSStyleImageValue, WTF::RawPtrTraits<WebCore::CSSStyleImageValue>, WTF::DefaultRefDerefTraits<WebCore::CSSStyleImageValue> >, WTF::RefPtr<WebCore::OffscreenCanvas, WTF::RawPtrTraits<WebCore::OffscreenCanvas>, WTF::DefaultRefDerefTraits<WebCore::OffscreenCanvas> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::RawPtrTraits<WebCore::HTMLVideoElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLVideoElement> >, WTF::RefPtr<WebCore::WebCodecsVideoFrame, WTF::RawPtrTraits<WebCore::WebCodecsVideoFrame>, WTF::DefaultRefDerefTraits<WebCore::WebCodecsVideoFrame> > >&> STDERR: 20 0x7f9b4475ac7b visit<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement>&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> >, mpark::variant<WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::RawPtrTraits<WebCore::HTMLCanvasElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::ImageBitmap, WTF::RawPtrTraits<WebCore::ImageBitmap>, WTF::DefaultRefDerefTraits<WebCore::ImageBitmap> >, WTF::RefPtr<WebCore::CSSStyleImageValue, WTF::RawPtrTraits<WebCore::CSSStyleImageValue>, WTF::DefaultRefDerefTraits<WebCore::CSSStyleImageValue> >, WTF::RefPtr<WebCore::OffscreenCanvas, WTF::RawPtrTraits<WebCore::OffscreenCanvas>, WTF::DefaultRefDerefTraits<WebCore::OffscreenCanvas> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::RawPtrTraits<WebCore::HTMLVideoElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLVideoElement> >, WTF::RefPtr<WebCore::WebCodecsVideoFrame, WTF::RawPtrTraits<WebCore::WebCodecsVideoFrame>, WTF::DefaultRefDerefTraits<WebCore::WebCodecsVideoFrame> > >&> STDERR: 21 0x7f9b4475241a switchOn<mpark::variant<WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::RawPtrTraits<WebCore::HTMLCanvasElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::ImageBitmap, WTF::RawPtrTraits<WebCore::ImageBitmap>, WTF::DefaultRefDerefTraits<WebCore::ImageBitmap> >, WTF::RefPtr<WebCore::CSSStyleImageValue, WTF::RawPtrTraits<WebCore::CSSStyleImageValue>, WTF::DefaultRefDerefTraits<WebCore::CSSStyleImageValue> >, WTF::RefPtr<WebCore::OffscreenCanvas, WTF::RawPtrTraits<WebCore::OffscreenCanvas>, WTF::DefaultRefDerefTraits<WebCore::OffscreenCanvas> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::RawPtrTraits<WebCore::HTMLVideoElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLVideoElement> >, WTF::RefPtr<WebCore::WebCodecsVideoFrame, WTF::RawPtrTraits<WebCore::WebCodecsVideoFrame>, WTF::DefaultRefDerefTraits<WebCore::WebCodecsVideoFrame> > >&, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >&)>, WebCore::CanvasRenderingContext2DBase::drawImage(WebCore::CanvasImageSource&&, float, float)::<lambda(auto:587&)> > STDERR: 22 0x7f9b4474280e WebCore::CanvasRenderingContext2DBase::drawImage(mpark::variant<WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::RawPtrTraits<WebCore::HTMLCanvasElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::ImageBitmap, WTF::RawPtrTraits<WebCore::ImageBitmap>, WTF::DefaultRefDerefTraits<WebCore::ImageBitmap> >, WTF::RefPtr<WebCore::CSSStyleImageValue, WTF::RawPtrTraits<WebCore::CSSStyleImageValue>, WTF::DefaultRefDerefTraits<WebCore::CSSStyleImageValue> >, WTF::RefPtr<WebCore::OffscreenCanvas, WTF::RawPtrTraits<WebCore::OffscreenCanvas>, WTF::DefaultRefDerefTraits<WebCore::OffscreenCanvas> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::RawPtrTraits<WebCore::HTMLVideoElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLVideoElement> >, WTF::RefPtr<WebCore::WebCodecsVideoFrame, WTF::RawPtrTraits<WebCore::WebCodecsVideoFrame>, WTF::DefaultRefDerefTraits<WebCore::WebCodecsVideoFrame> > >&&, float, float) STDERR: 23 0x7f9b3fb7b2dc operator() STDERR: 24 0x7f9b3fb9ca0a toJS<WebCore::IDLUndefined, WebCore::jsCanvasRenderingContext2DPrototypeFunction_drawImage1Body(JSC::JSGlobalObject*, JSC::CallFrame*, IDLOperation<JSCanvasRenderingContext2D>::ClassParameter)::<lambda()> > STDERR: 25 0x7f9b3fb7b6d9 jsCanvasRenderingContext2DPrototypeFunction_drawImage1Body STDERR: 26 0x7f9b3fb7c9c0 jsCanvasRenderingContext2DPrototypeFunction_drawImageOverloadDispatcher STDERR: 27 0x7f9b3fb9cec0 call<WebCore::jsCanvasRenderingContext2DPrototypeFunction_drawImageOverloadDispatcher> STDERR: 28 0x7f9b3fb7caf3 jsCanvasRenderingContext2DPrototypeFunction_drawImage STDERR: 29 0x7f9ad580c038 ??? History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fcanvas%2Felement%2Flayers%2F2d.layer.global-states.filter.ctx-filter.no-transform.html&style=debug&platform=GTK&platform=WPE
Attachments
Fujii Hironori
Comment 1 2026-01-16 05:56:03 PST
last good: 305560@main first bad: 305575@main 305570@main seems to be the culprit.
Carlos Garcia Campos
Comment 2 2026-01-20 00:46:13 PST
EWS
Comment 3 2026-01-20 02:36:27 PST
Committed 305869@main (6b5f3fea4c81): <https://commits.webkit.org/305869@main> Reviewed commits have been landed. Closing PR #56883 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.