REGRESSION(305570@main): [WPE][GTK] ASSERTION FAILED: m_transparencyLayerCount > 0 https://bugs.webkit.org/show_bug.cgi?id=305637

Reviewed by Adrian Perez de Castro.

In 305570@main I replaced the internal calls to
beginTransparencyLayer/endTransparencyLayer by saveLayer/restoreLayer
but I forgot two endTransparencyLayer calls.

* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContextSkia::drawNativeImage):
(WebCore::GraphicsContextSkia::drawSkiaPath):

Canonical link: https://commits.webkit.org/305869@main